@@ -1,3 +1,8 @@
+2006-06-28  Derek R. Price  <derek@ximbiot.com>
+
+	* savedir.c (CLOSEDIR): Remove.  All uses changed to closedir.
+	Autoconf 2.60 says this stuff was obsolete.
+
 2006-06-20  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* openat.c (openat): Use ?:, not if, to work around GCC bug 4210
